# edge-detection-rnd

./: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/minimalnativeapp/: Camera2Manager.kt  CameraGLView.kt  MainActivity.kt  NativeBridge.kt  SimpleRenderer.kt
app/src/main/java/com/example/minimalnativeapp/camera/: Camera2Manager.kt
app/src/main/java/com/example/minimalnativeapp/gl/: CameraGLView.kt  SimpleRenderer.kt
app/src/main/java/com/example/minimalnativeapp/nativebridge/: NativeBridge.kt
app/src/main/java/com/example/minimalnativeapp/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
web/: package-lock.json  package.json  tsconfig.json
web/src/: index.html  main.ts
